--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "sqlite3": "^5.1.7"
   },
   "dependencies": {
+    "@fastify/autoload": "^5.8.2",
     "@fastify/jwt": "^8.0.1",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.11",
+    "fastify-ip": "^1.0.0",
     "fastify-plugin": "^4.5.1"
   }
 }
