--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   },
   "homepage": "https://github.com/kne-union/fastify-account#readme",
   "devDependencies": {
+    "@kne/fastify-file-manager": "^0.1.1-alpha.1",
     "@kne/fastify-sequelize": "^0.1.3",
     "fastify": "^4.27.0",
     "husky": "^9.0.11",
