--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "init": "husky",
     "dev": "npx fastify-cli start ./index.js",
-    "start": "",
+    "start": "nodemon ./tests/server.js",
     "build:md": "npx @kne/md-doc",
     "start:md": "npx @kne/md-doc --watch",
     "prettier": "prettier --config .prettierrc --write '{libs/**/*,index}.{js,jsx,ts,tsx,json,css,scss}'",
@@ -38,6 +38,7 @@
     "@kne/fastify-sequelize": "^0.1.3",
     "fastify": "^4.27.0",
     "husky": "^9.0.11",
+    "nodemon": "^3.1.1",
     "prettier": "^3.2.5",
     "sqlite3": "^5.1.7"
   },
