--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "dayjs": "^1.11.11",
     "fastify-ip": "^1.0.0",
     "fastify-plugin": "^4.5.1",
-    "http-errors": "^2.0.0"
+    "http-errors": "^2.0.0",
+    "lodash": "^4.17.21"
   }
 }
