--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fastify-account",
-  "version": "1.0.0",
+  "version": "1.0.0-alpha.0",
   "description": "fastify的用户管理账号等实现",
   "main": "index.js",
   "scripts": {
@@ -44,6 +44,7 @@
     "husky": "^9.0.11",
     "nodemon": "^3.1.1",
     "prettier": "^3.2.5",
+    "qs": "^6.12.1",
     "sqlite3": "^5.1.7",
     "widdershins": "^4.0.1"
   },
