--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@kne/fastify-account",
-  "version": "1.0.0-alpha.0",
+  "version": "1.0.0-alpha.1",
   "description": "fastify的用户管理账号等实现",
   "main": "index.js",
   "scripts": {
@@ -39,6 +39,7 @@
   "devDependencies": {
     "@fastify/swagger": "^8.14.0",
     "@kne/fastify-file-manager": "^1.0.0",
+    "@kne/fastify-response-data-format": "^0.1.0",
     "@kne/fastify-sequelize": "^1.0.0",
     "fastify": "^4.27.0",
     "husky": "^9.0.11",
